Fix segmentation fault on initscr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,6 @@ if(RAW_VALUES_DEC)
 endif()
 SET_TARGET_PROPERTIES(CrazyDiskInfo PROPERTIES OUTPUT_NAME crazy)
 target_link_libraries(CrazyDiskInfo atasmart)
+target_link_libraries(CrazyDiskInfo tinfow)
 target_link_libraries(CrazyDiskInfo ncursesw)
 INSTALL(TARGETS CrazyDiskInfo RUNTIME DESTINATION /usr/sbin)
