--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.0)
 option(RAW_VALUES_DEC "Display Raw Values in Decimal instead of Hex" OFF)
 project(CrazyDiskInfo CXX)
 add_executable(CrazyDiskInfo main.cpp)
-set(CMAKE_CXX_FLAGS "-Wall -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 SET_TARGET_PROPERTIES(CrazyDiskInfo PROPERTIES OUTPUT_NAME crazy)
 target_link_libraries(CrazyDiskInfo atasmart)
 target_link_libraries(CrazyDiskInfo tinfow)
