--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 SET_TARGET_PROPERTIES(CrazyDiskInfo PROPERTIES OUTPUT_NAME crazy)
 target_link_libraries(CrazyDiskInfo atasmart)
 target_link_libraries(CrazyDiskInfo ncursesw)
-INSTALL(TARGETS CrazyDiskInfo RUNTIME DESTINATION /usr/sbin)
+include(GNUInstallDirs)
+INSTALL(TARGETS CrazyDiskInfo RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR})
